style.css
/* ... */
.add-new:hover {
    color: #aaa;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 12px 22px rgba(0, 0, 0, 0.15);
}


/* secondary nav css */

.nav-secondary {
    position: absolute;
    width: 100%;
    background-color: rgba(245, 245, 245, .9);
    z-index: 4;
}

.nav-secondary a {
    text-decoration: none;
    color: #222;
}

.nav-secondary ul,
.nav-secondary p {
    margin: 10px auto;
}

@media screen and (max-width: 767px) {
    ul.list-inline {
        margin-left: -30px;
    }
    ul.list-inline li {
        display: inline-block;
        margin-right: 25px;
    }
    ul.list-inline li a {
        text-decoration: none;
        color: #333;
        -webkit-transition: all .1s ease-in;
        transition: all .1s ease-in;
        font-size: 16px;
    }
    ul.list-inline li a:hover {
        color: #5cc3f6;
    }
    .nav-secondary {
        margin-top: 48px;
        padding: 0 15px;
    }
    .nav-secondary-scrolled {
        position: fixed;
        margin-top: 0px;
        background-color: rgba(245, 245, 245, .97);
    }
    .nav-secondary li a.active {
        color: #5cc3f6;
    }
    .hidden-xs {
        display: none;
    }
}

@media screen and (min-width: 768px) {
    ul.list-inline li {
        display: inline-block;
        margin-right: 25px;
    }
    ul.list-inline li a {
        text-decoration: none;
        color: #333;
        -webkit-transition: all .1s ease-in;
        transition: all .1s ease-in;
        font-size: 16px;
        font-weight: 400;
    }
    ul.list-inline li a:hover {
        color: #5cc3f6;
    }
    .nav-secondary {
        margin-top: 60px;
        padding: 0 30px;
    }
    .nav-secondary-scrolled {
        position: fixed;
        margin-top: 0px;
        background-color: rgba(245, 245, 245, .97);
    }
    .nav-secondary li a.active {
        color: #5cc3f6;
    }
}

.j1-secondary {
    padding-top: 210px;
}

